# crypto-data-pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.data-quality  README.md  account_collector.py  docker-compose.collectors.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: architecture.md  data-quality.md  nas-deployment.md
notes/: mariadb.txt
src/crypto_pipeline/: __init__.py  account_collector.py  binance_collector.py  bithumb_candle_client.py  bithumb_collector.py  collector_db.py  config.py  indicators.py  main.py  mariadb_connection.py  mariadb_probe.py  mariadb_schema.py  models.py  pipeline.py  quality.py  repository.py  source.py  technical_indicators.py
tests/: test_collector_database.py  test_collectors.py  test_data_quality_v2.py  test_pipeline_integration.py  test_production_parity.py  test_quality.py
