[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-data-pipeline"
version = "1.0.0"
description = "Executable cryptocurrency collectors and auditable data-quality pipeline"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
crypto-pipeline = "crypto_pipeline.main:main"
bithumb-collector = "crypto_pipeline.bithumb_collector:main"
binance-collector = "crypto_pipeline.binance_collector:main"
account-collector = "crypto_pipeline.account_collector:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
